directories now being generated dynamically; picture margin-cropping resolved

--- a/web/chrome/sass/structured.scss
+++ b/web/chrome/sass/structured.scss
@@ -17,6 +17,14 @@ $wide1: 1600px;
 $wide2: 2400px;
 
 // ---------------------------------------------------------------------------
+// Mixins
+@mixin calc($property, $expression) { 
+  #{$property}: -webkit-calc(#{$expression});
+  #{$property}: -moz-calc(#{$expression});
+  #{$property}: calc(#{$expression});
+}
+
+// ---------------------------------------------------------------------------
 // Widgets to return real dimensions 
 
 #sfun-yardstick-x {
@@ -49,6 +57,9 @@ $wide2: 2400px;
     &.flow-1 > .cell {
       width: 100%;
       height: 100%;
+      // use calc to subtract cell margin, if supported
+      @include calc(width, (100%)+" - "+($alley));
+      @include calc(height, (100%)+" - "+($alley));
     }
 
     // portrait (*2)
@@ -57,16 +68,22 @@ $wide2: 2400px;
       &.flow-2 > .cell {
         width: (100% / 2);
         height: (100% / 4);
+        @include calc(width, (100% / 2)+" - "+($alley));
+        @include calc(height, (100% / 4)+" - "+($alley));
       }
       // 4x8
       &.flow-4 > .cell {
         width: (100% / 4);
         height: (100% / 8);
+        @include calc(width, (100% / 4)+" - "+($alley));
+        @include calc(height, (100% / 8)+" - "+($alley));
       }
       // 8x16
       &.flow-8 > .cell {
         width: (100% / 8);
         height: (100% / 16);
+        @include calc(width, (100% / 8)+" - "+($alley));
+        @include calc(height, (100% / 16)+" - "+($alley));
       }
     }
 
@@ -76,16 +93,22 @@ $wide2: 2400px;
       &.flow-2 > .cell {
         width: (100% / 4);
         height: (100% / 2);
+        @include calc(width, (100% / 4)+" - "+($alley));
+        @include calc(height, (100% / 2)+" - "+($alley));
       }
       // 8x4
       &.flow-4 > .cell {
         width: (100% / 8);
         height: (100% / 4);
+        @include calc(width, (100% / 8)+" - "+($alley));
+        @include calc(height, (100% / 4)+" - "+($alley));
       }
       // 16x8
       &.flow-8 > .cell {
         width: (100% / 16);
         height: (100% / 8);
+        @include calc(width, (100% / 16)+" - "+($alley));
+        @include calc(height, (100% / 8)+" - "+($alley));
       }
     }
 
@@ -95,16 +118,22 @@ $wide2: 2400px;
       &.flow-2 > .cell {
         width: (100% / 6);
         height: (100% / 2);
+        @include calc(width, (100% / 6)+" - "+($alley));
+        @include calc(height, (100% / 2)+" - "+($alley));
       }
       // 12x4
       &.flow-4 > .cell {
         width: (100% / 12);
         height: (100% / 4);
+        @include calc(width, (100% / 12)+" - "+($alley));
+        @include calc(height, (100% / 4)+" - "+($alley));
       }
       // 24x8
       &.flow-8 > .cell {
         width: (100% / 24);
         height: (100% / 8);
+        @include calc(width, (100% / 24)+" - "+($alley));
+        @include calc(height, (100% / 8)+" - "+($alley));
       }
     }
 
@@ -114,16 +143,22 @@ $wide2: 2400px;
       &.flow-2 > .cell {
         width: (100% / 8);
         height: (100% / 2);
+        @include calc(width, (100% / 8)+" - "+($alley));
+        @include calc(height, (100% / 2)+" - "+($alley));
       }
       // 16x4
       &.flow-4 > .cell {
         width: (100% / 16);
         height: (100% / 4);
+        @include calc(width, (100% / 16)+" - "+($alley));
+        @include calc(height, (100% / 4)+" - "+($alley));
       }
       // 32x8
       &.flow-8 > .cell {
         width: (100% / 32);
         height: (100% / 8);
+        @include calc(width, (100% / 32)+" - "+($alley));
+        @include calc(height, (100% / 8)+" - "+($alley));
       }
     }
 
@@ -132,6 +167,8 @@ $wide2: 2400px;
       text-align: center;
       // don't allow anything to bleed over the edge (to avoid superfluous scrollbars)
       overflow: hidden;
+      // add margin here but subtract twice (left+right or top+bottom) from cell dimensions
+      @include calc(margin, ($alley/2));
 
       // currently these classes are only used by js
       &.selectablecell {}
@@ -158,7 +195,9 @@ $wide2: 2400px;
         height: 100%;
         width: 100%;
         text-decoration: none;
-        margin: $alley;
+        // can't put margin here without cropping images, but we use that as a fallback for non-calc browsers
+        margin: ($alley/2);
+        @include calc(margin, "0px");
 
         // landscape images
         img.x-bound {
@@ -254,11 +293,11 @@ $wide2: 2400px;
       // directories with preview images
       .directory {
         border: 1px solid $directory_light;
+        border-radius: ($alley * 2);
+        box-sizing: border-box;
         width: 100%;
         height: 100%;
         position: relative;
-        margin: $alley;
-        border-radius: (2 * $alley);
 
         .overlay {
           width: 100%;
@@ -291,6 +330,11 @@ $wide2: 2400px;
       .subcell {
         width: (100% / 2);
         height: (100% / 2);
+        // add margin here but subtract twice (left+right or top+bottom) from cell dimensions
+        @include calc(margin, ($alley / 2));
+        // use calc to subtract cell margin, if supported
+        @include calc(width, (100% / 2)+" - "+($alley));
+        @include calc(height, (100% / 2)+" - "+($alley));
       }
 
       // show metric if image is visible or part-visible
